[gd_scene load_steps=10 format=3 uid="uid://dcxgxf8qeioqg"]

[ext_resource type="Script" uid="uid://delxp323ma44x" path="res://Scripts/UI/UImanager.gd" id="1_dewlx"]
[ext_resource type="PackedScene" uid="uid://fyjad1d56ayn" path="res://Scenes/UI/death_screen.tscn" id="3_b83rk"]
[ext_resource type="Texture2D" uid="uid://d1f7f317j83ke" path="res://Sprites/heart/heart_full.png" id="3_dewlx"]
[ext_resource type="PackedScene" uid="uid://cdmgcdjr3f6ke" path="res://Scenes/UI/win_screen.tscn" id="4_7tgkj"]
[ext_resource type="Texture2D" uid="uid://dppg0rot1vqxe" path="res://Sprites/alert-sign3.png" id="5_oqha6"]
[ext_resource type="PackedScene" uid="uid://ddhqvxohaf2mq" path="res://Scenes/guide_UI.tscn" id="6_88n7v"]
[ext_resource type="Texture2D" uid="uid://di1ujvjclgjuk" path="res://Sprites/pause_button.png" id="7_jevvu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_w8wei"]
atlas = ExtResource("7_jevvu")
region = Rect2(0, 0, 50, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_8wlyu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8wei")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Main UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dewlx")

[node name="GuideContainer" parent="." instance=ExtResource("6_88n7v")]
visible = false
layout_mode = 1

[node name="DeathScreen" parent="." instance=ExtResource("3_b83rk")]
layout_mode = 1

[node name="WinScreen" parent="." instance=ExtResource("4_7tgkj")]
layout_mode = 1

[node name="HealthContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0217014
anchor_top = 0.0277778
anchor_right = 0.141493
anchor_bottom = 0.0987654
offset_left = 18.0
offset_top = 19.0
offset_right = 146.0
offset_bottom = 59.0
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="HealthContainer"]
layout_mode = 2
texture = ExtResource("3_dewlx")
expand_mode = 2

[node name="TextureRect2" type="TextureRect" parent="HealthContainer"]
layout_mode = 2
texture = ExtResource("3_dewlx")
expand_mode = 2

[node name="TextureRect3" type="TextureRect" parent="HealthContainer"]
layout_mode = 2
texture = ExtResource("3_dewlx")
expand_mode = 2

[node name="AlertIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -42.0
offset_top = 42.0
offset_right = 42.0
offset_bottom = 126.0
grow_horizontal = 2
texture = ExtResource("5_oqha6")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -87.0
offset_top = 78.0
offset_right = -79.0
offset_bottom = 86.0
grow_horizontal = 0
scale = Vector2(3, 3)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Button"]
sprite_frames = SubResource("SpriteFrames_8wlyu")
